Change add-component2 class

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -796,7 +796,7 @@ span.entity-name {
   text-align: left;
 }
 
-.add-component2 {
+.add-component-container {
   display: flex;
   justify-content: center;
   background-color: #2b2b2b;
