Added 'extraCloseKeyCode' for Modal

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -843,7 +843,6 @@ span.entity-name {
   height: 22px;
 }
 
-
 .row input[type=text],
 .row input[type=number],
 .row input.string,
@@ -854,6 +853,7 @@ span.entity-name {
   color: #1faaf2;
   border: 1px solid transparent;
   background: #222;
+}
 
 /* shortcuts help */
 .help-lists {
