--- a/src/css/main.css
+++ b/src/css/main.css
@@ -887,19 +887,15 @@ span.entity-name {
 
 .help-key span {
   font-size: 12px;
-  color: #555;
+  color: #999;
   display: inline-block;
   padding: 0 8px;
   text-align: center;
-  background-color: #eee;
+  background-color: #2e2e2e;
   background-repeat: repeat-x;
-  background-image: linear-gradient(#f5f5f5 0%, #eee 100%);
-  border: 1px solid #ccc;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
+  border: 1px solid #666;
   border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 0 #ccc;
-  box-shadow: inset 0 1px 0 #fff, 0 1px 0 #ccc;
+  box-shadow: 0 0 5px #000;
 }
 
 .help-key-def {
