Added ellipsis to property name

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -339,6 +339,8 @@ div.vec3 {
   display: inline-block;
   vertical-align: middle;
   width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .components .row .map_value {
