texture dialog tweaked

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -442,6 +442,7 @@ a.button:hover {
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.6);
+  animation: animateopacity 0.2s ease-out;
 }
 
 .modal h3 {
@@ -457,7 +458,7 @@ a.button:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: auto;
   padding: 0;
-  width: 920px;
+  width: 940px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
   animation: animatetop 0.2s ease-out;
   max-height: 90%;
@@ -466,15 +467,13 @@ a.button:hover {
 }
 
 @keyframes animatetop {
-  from {
-    opacity: 0;
-    top: -300px;
-  }
+  from {top: 50px;}
+  to {top: 0;}
+}
 
-  to {
-    opacity: 1;
-    top: 0;
-  }
+@keyframes animateopacity {
+  from {opacity: 0}
+  to {opacity: 1}
 }
 
 .close {
@@ -512,10 +511,16 @@ a.button:hover {
 /* Gallery */
 .gallery {
   padding: 3px;
-  margin: 20px auto 0 auto;
+  margin: 15px auto 0 auto;
   overflow: auto;
   max-height: 50vh;
+  background: #232323;
 }
+
+.newimage .gallery {
+  padding: 16px;
+}
+
 
 
 .gallery li {
@@ -570,9 +575,13 @@ a.button:hover {
   width: 200px;
 }
 
-.new_asset_options {
-  float: left;
-  width: 600px;
+.preview input {
+  display: block;
+  margin: 8px 0;
+  width: 144px;
+}
+.preview button {
+  width: 155px;
 }
 
 .modal button {
@@ -610,9 +619,17 @@ a.button:hover {
 }
 
 .newimage {
+  margin-top: 10px;
+  padding: 10px;
   background-color: #323232;
   overflow: auto;
-  padding: 10px;
+  font-size: 13px;
+  color: #bcbcbc;
+}
+
+.newimage input {
+  padding: 3px 5px;
+  color: #1eaaf1;
 }
 
 .hide {
@@ -852,19 +869,32 @@ a.help-link:hover {
   background-color: #1eaaf1;
   border-radius: 0px;
   cursor: pointer;
-  padding: 10px 20px;
+  padding: 10px 15px;
+  margin-left: 10px;
 }
 
 .uploadcare-widget-button-open:hover {
   background-color: #346392;
 }
 
-.new_asset_options > ul > li {
+.new_asset_options {
+  float: left;
+  width: 580px;
+  margin: 10px;
+}
+
+.new_asset_options > ul {
   padding: 5px;
+  margin-left: 10px;
+}
+
+.new_asset_options > ul > li {
+  padding: 10px 0;
 }
 
 .new_asset_options .imageUrl {
-  width: 400px;
+  width: 350px;
+  margin-left: 5px;
 }
 
 span.entity-name {
