--- a/src/css/main.css
+++ b/src/css/main.css
@@ -413,9 +413,9 @@ a.button:hover {
 }
 
 .modal {
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-  height: 100%;
+  display: flex;
+  position: fixed;
+  z-index: 9999;
   left: 0;
   overflow: auto;
   padding-top: 100px;
@@ -430,7 +430,7 @@ a.button:hover {
 }
 
 .modal h3 {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 100;
   margin: 0.6em 0;
 }
@@ -445,7 +445,6 @@ a.button:hover {
   width: 940px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
   animation: animatetop 0.2s ease-out;
-  max-height: 90%;
   max-height: calc(100% - 100px);
   overflow: hidden;
 }
@@ -494,6 +493,8 @@ a.button:hover {
 
 /* Gallery */
 .gallery {
+  display: flex;
+  flex-wrap: wrap;
   padding: 3px;
   margin: 15px auto 0 auto;
   overflow: auto;
@@ -505,15 +506,11 @@ a.button:hover {
   padding: 16px;
 }
 
-
-
 .gallery li {
   width: 155px;
   margin-right: 16px;
   margin-bottom: 16px;
-  float: left;
   overflow: hidden;
-  display: inline-block;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.6);
   cursor: pointer;
   border-radius: 2px;
@@ -528,6 +525,29 @@ a.button:hover {
   padding: 3px 10px;
   min-height: 60px;
   margin: 0;
+}
+
+.preview {
+  width: 200px;
+  padding: 10px;
+}
+
+.preview input {
+  display: block;
+  margin: 8px 0;
+  width: 144px;
+}
+.preview button {
+  width: 155px;
+}
+
+.preview .detail .title {
+  max-width: 155px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: inline-block;
+  color: #fff;
 }
 
 .gallery li:hover .detail {
@@ -551,21 +571,6 @@ a.button:hover {
 
 .gallery li .detail span.title {
   color: #FFF !important;
-}
-
-.preview {
-  float: right;
-  padding: 10px;
-  width: 200px;
-}
-
-.preview input {
-  display: block;
-  margin: 8px 0;
-  width: 144px;
-}
-.preview button {
-  width: 155px;
 }
 
 .modal button {
@@ -609,6 +614,7 @@ a.button:hover {
   overflow: auto;
   font-size: 13px;
   color: #bcbcbc;
+  display: flex;
 }
 
 .newimage input {
@@ -862,8 +868,6 @@ a.help-link:hover {
 }
 
 .new_asset_options {
-  float: left;
-  width: 580px;
   margin: 10px;
 }
 
@@ -954,60 +958,6 @@ span.entity-name {
   background: #222;
 }
 
-/* shortcuts help */
-.help-lists {
-  display: flex;
-  justify-content: space-around;
-}
-
-.help-list {
-  list-style: none;
-  margin: 0;
-  padding: 0 0 10px 0;
-  width: 350px;
-}
-
-.help-list li {
-  margin-right: 40px;
-}
-
-.help-key-unit {
-  line-height: 1.8;
-  margin-right: 2em;
-  padding: 5px 0;
-}
-
-.help-key {
-  min-width: 60px;
-  position: relative;
-  bottom: 2px;
-  margin-right: 4px;
-}
-
-.help-key span {
-  font-size: 12px;
-  color: #555;
-  display: inline-block;
-  padding: 0 8px;
-  text-align: center;
-  background-color: #eee;
-  background-repeat: repeat-x;
-  background-image: linear-gradient(#f5f5f5 0%, #eee 100%);
-  border: 1px solid #ccc;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 0 #ccc;
-  box-shadow: inset 0 1px 0 #fff, 0 1px 0 #ccc;
-}
-
-.help-key-def {
-  display: inline-block;
-  margin-left: 1em;
-  color: #BBB;
-}
-
-/* shortcuts help */
 .help-lists {
   display: flex;
   justify-content: space-around;
