--- a/src/css/main.css
+++ b/src/css/main.css
@@ -195,6 +195,10 @@ input.number:focus {
   cursor: auto;
 }
 
+input.error {
+  border: 1px solid #a00;
+}
+
 #left-sidebar {
   background: #2b2b2b;
   bottom: 0;
@@ -605,6 +609,11 @@ a.button:hover {
 .modal button.active {
   background-color: #27496d;
   text-shadow: -1px 1px #193047;
+}
+
+.modal button:disabled {
+  background-color: #888;
+  cursor: none;
 }
 
 .newimage {
