--- a/src/css/main.css
+++ b/src/css/main.css
@@ -446,10 +446,10 @@ a.button:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: auto;
   padding: 0;
-  width: 940px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
   animation: animatetop 0.2s ease-out;
-  max-height: calc(100% - 100px);
+  max-height: calc(100% - 50px);
+  max-width: calc(100% - 50px);
   overflow: hidden;
 }
 
@@ -504,6 +504,8 @@ a.button:hover {
   overflow: auto;
   max-height: 50vh;
   background: #232323;
+  padding-left: 15px;
+  padding-top: 15px;
 }
 
 .newimage .gallery {
