--- a/src/css/main.css
+++ b/src/css/main.css
@@ -445,6 +445,8 @@ a.button:hover {
   background-color: #232323;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: auto;
+  min-width: 200px;
+  min-height: 200px;
   padding: 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
   animation: animatetop 0.2s ease-out;
@@ -514,8 +516,7 @@ a.button:hover {
 
 .gallery li {
   width: 155px;
-  margin-right: 16px;
-  margin-bottom: 16px;
+  margin: 8px;
   overflow: hidden;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.6);
   cursor: pointer;
