Adding support for editing a `vec4` type in the inspector

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -291,12 +291,14 @@ input[type=color]::-moz-focus-inner {
 }
 
 div.vec2,
-div.vec3 {
+div.vec3,
+div.vec4, {
   display: inline;
 }
 
 .vec2 input.number,
-.vec3 input.number {
+.vec3 input.number,
+.vec4 input.number {
   width: 46px;
 }
 
