--- a/src/css/main.css
+++ b/src/css/main.css
@@ -774,7 +774,7 @@ a.help-link:hover {
   background-color: #191919;
   position: fixed;
   z-index: 9999;
-  zoom: reset;
+  zoom: 1;
 }
 
 span.entity-name {
