Fixes #428 open in a new tab for images

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -524,6 +524,12 @@ a.button:hover {
   padding: 3px 10px;
 }
 
+.gallery li .button.fa-external-link {
+  margin-left: 136px;
+  margin-top: 5px;
+  position: fixed;
+}
+
 .preview {
   padding: 10px;
   width: 150px;
