--- a/src/css/main.css
+++ b/src/css/main.css
@@ -138,9 +138,6 @@ input {
 
 .scenegraph-toolbar {
   background-color: #333;
-  position: fixed;
-  top: 32px;
-  z-index: 999;
 }
 
 .scenegraph-actions {
@@ -771,8 +768,6 @@ span.subcomponent {
   outline: none;
   overflow-y: auto;
   padding: 0;
-  position: fixed;
-  top: 98px;
   width: 230px;
 }
 
@@ -1189,4 +1184,11 @@ span.entity-name {
 
 .dropdown:hover .dropbtn {
   color: #1faaf2;
+}
+
+.savedRecordings {
+  display: inline-block;
+  margin-top: 10px;
+  vertical-align: middle;
+  width: 80%;
 }
