fix all lint errors (both js and css)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,7 +47,7 @@ button {
 }
 
 code {
-  font-family: Consolas, Andale Mono, Monaco, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Consolas, Andale Mono, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 textarea {
