color transition component header

--- a/src/index.styl
+++ b/src/index.styl
@@ -326,10 +326,14 @@ div.vec4
   background-color #323232
   border-bottom 1px solid #262626
   border-top 1px solid #262626
+  cursor pointer
   color #fff
   height 16px
   padding 10px
+  transition background-color .1s
   vertical-align middle
+  &:hover
+    background-color #444
 
 
 .collapsible .menu
@@ -696,10 +700,6 @@ span.subcomponent
   float none !important
   margin-left 10px
   vertical-align top !important
-
-
-.collapsible .static
-  cursor pointer
 
 
 .a-canvas.state-dragging
