refactor whole scenegraph code, Entity component

--- a/src/index.styl
+++ b/src/index.styl
@@ -768,6 +768,7 @@ span.subcomponent
   display flex
   justify-content space-between
   padding 4px
+  width 100%
   white-space nowrap
   transition background .1s
   &:hover
